--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,7 +14,7 @@ http {
             proxy_pass http://host.docker.internal:8080/;
         }
         location / {
-            proxy_pass http://host.docker.internal:3000;
+            proxy_pass http://host.docker.internal:8081/;
         }
 
         client_max_body_size 20m;
