--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: “3.8”
 services:
   mongo:
     container_name: mongo
-    image: arm64v8/mongo:latest
+    image: mongo:latest
     ports:
       - 27017:27017
     command: mongod
