--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,11 +10,19 @@ http {
         listen 0.0.0.0:80;
         server_name localhost;
 
-        location /backend/ {
-            proxy_pass http://host.docker.internal:8080/;
+        location /storage/ {
+            alias /var/html/storage/;
         }
-        location / {
-            proxy_pass http://host.docker.internal:8081/;
+
+        location /backend/ {
+            add_header Access-Control-Allow-Origin *;
+            add_header Access-Control-Allow-Credentials true;
+            add_header Access-Control-Allow-Methods *;
+            add_header Access-Control-Allow-Headers DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type;
+            proxy_set_header        Host $http_host;
+            proxy_set_header        X-Forwarded-Host $host;
+            proxy_set_header        X-Forwarded-Server $host;
+            proxy_pass http://golang:8080/;
         }
 
         client_max_body_size 20m;
