--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,6 +11,7 @@ http {
         server_name localhost;
 
         location /storage/ {
+            allow all;
             alias /var/html/storage/;
         }
 
@@ -22,7 +23,14 @@ http {
             proxy_set_header        Host $http_host;
             proxy_set_header        X-Forwarded-Host $host;
             proxy_set_header        X-Forwarded-Server $host;
-            proxy_pass http://golang:8080/;
+            proxy_pass http://backend:8080/;
+        }
+
+
+        location / {
+            root   /var/html/dashboard/;
+            # index  index.html index.html;
+            try_files $uri /index.html;
         }
 
         client_max_body_size 20m;
