--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -6,40 +6,12 @@ services:
     ports:
       - 27017:27017
     command: mongod
-  backend:
-    build: .
-    container_name: backend
-    depends_on:
-      - mongo
-    command: 
-      go run main.go
-    ports:
-      - '8080:8080'
-    volumes:
-      - storage:/go/tmp/src/mongo-golang/storage
-  dashboard:
-    build:
-      context: ../sspk_site_admin
-      dockerfile: ../sspk_site_admin/Dockerfile
-    container_name: dashboard
-    volumes:
-      - dashboard:/app/dist
-    depends_on:
-      - backend
   nginx:
-    build: nginx
+    build: ./nginx/development
     container_name: nginx
     depends_on:
-      - backend
-      - dashboard
       - mongo
     ports:
       - '80:80'
     volumes:
-      - ./nginx/development/nginx.conf:/etc/nginx/nginx.conf:ro
-      - dashboard:/var/html/dashboard/
-      - storage:/var/html/storage/
-  
-volumes:
-  storage:
-  dashboard:
+      - ./nginx/development/nginx.conf:/etc/nginx/nginx.conf
