--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -16,6 +16,9 @@ http {
         }
 
         location /backend/ {
+            proxy_buffer_size 128k;
+            proxy_buffers 4 256k;
+            proxy_busy_buffers_size 256k;
             add_header Access-Control-Allow-Origin *;
             add_header Access-Control-Allow-Credentials true;
             add_header Access-Control-Allow-Methods *;
